--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A word counter commandline application",
   "main": "main.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "nyc mocha"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "eslint": "^4.12.0",
     "eslint-config-google": "^0.9.1",
-    "istanbul": "^0.4.5"
+    "istanbul": "^0.4.5",
+    "nyc": "^11.3.0"
   }
 }
