--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A word counter commandline application",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha"
+    "test": "nyc mocha",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
